# Optimization

./: AAD22.cpp  AAD22.hpp  CMakeLists.txt  Differentiator.hpp  Logger.h  README.md  main.cpp  plot.ipynb
black_scholes/: black_scholes_numerical.cpp
differentiator/: AAD22.cpp  AAD22.hpp  CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp
headers/: utils.hpp
include/: Consts.h  Exp.h  Exp.hpp  GccConsts.h  Logger.h
include/core/: FFTExp.h
include/maths/: EHIntegrator.h  RKF45Integrator.h
include/physics/: AirDensity.h  Consts.h  DragCoefficients.h  Simulator.h
include/utils/: Math.h  SleSolver.h
lab01/: CMakeLists.txt  main.cpp
lab01/include/: Consts.h  Exp.h  GccConsts.h
lab01/src/: Logger.cpp
lab01/tests/: Functions.h
lab02/: CMakeLists.txt  main.cpp
lab02/include/: Exp.h
lab02/src/: Logger.cpp
lab02/tests/: Tests.cpp
lab03/: main.cpp
lab03/include/: Exp.h
lab03/tests/: Tests.cpp
lab04/include/: Exp.h
lab04/include/consts/: Consts.h  GccConsts.h
lab04/include/core/: ChebyshevExp.h  FFTExp.h  PadeExp.h  TaylorExp.h
lab04/include/utils/: Logger.h
lab04/tests/: Tests.cpp  Tests.h
lab05/: AAD22.cpp  CMakeLists.txt  Differentiator.hpp  main.cpp
lab06/: CMakeLists.txt
lab06/include/physics/: Atmosphere.h  Consts.h  DragCoefficients.h
lab06/include/utils/: Logger.h
lab06/src/: Atmosphere.cpp  Simulator.cpp
lab07/: .gitignore  main.cpp
lab07/include/maths/: EHIntegrator.h
lab07/src/: EHIntegrator.cpp
lab07/tests/: Tests.h
lab08/: plot.ipynb  satellite.cpp
lab09/: CMakeLists.txt  main.cpp
lab09/black_scholes/: black_scholes_analytical.cpp
lab09/headers/: black_scholes_analytical.hpp  black_scholes_numerical.hpp  config.hpp  tests.hpp
lab09/maths/: RKF45Integrator.cpp
lab09/tests/: tests.cpp
lab09/utils/: utils.cpp
src/: AirDensity.cpp  DragCoefficients.cpp  EHIntegrator.cpp  Logger.cpp  RKF45Integrator.cpp  Simulator.cpp
tests/: Functions.h  Tests.cpp  Tests.h
tests/inner/: ChebyshevTests.cpp  ChebyshevTests.h  PadeTests.cpp  PadeTests.h  TaylorTests.cpp  TaylorTests.h
